[package]
name = "covnes"
version = "0.1.0"
authors = ["William Robson <wrbs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
bitflags = "1.2.1"
snafu = "0.6.6"
anyhow = "1.0.57"
