[package]
name = "covnes"
version = "0.1.0"
authors = ["William Robson <wrbs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
bitflags = "1.3.2"
anyhow = "1.0.57"
thiserror = "1.0.31"
