[package]
name = "covnes_sdl"
version = "0.1.0"
authors = ["Will Robson <wrbs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
covnes = { path = "../covnes" }
structopt = "0.3.13"

[dependencies.sdl2]
version = "0.33"
