[package]
name = "covnes_sdl"
version = "0.1.0"
authors = ["Will Robson <wrbs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covnes = { path = "../covnes" }
structopt = "0.3.26"
sdl2 = { version = "0.35.2", features = ["bundled"] }
anyhow = "1.0.57"
